added date and translated

--- a/client/src/components/AddTodo/addTodo.scss
+++ b/client/src/components/AddTodo/addTodo.scss
@@ -1,5 +1,6 @@
 .add-todo {
   margin-top: 30px;
+  margin-bottom: 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
